<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_303030"
        android:orientation="vertical"
        android:weightSum="2">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearDataEntry"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/compression_note"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white">

                    <EditText
                        android:id="@+id/etVideoBitrateValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:hint="@string/enter_the_video_bitrate"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white">

                    <EditText
                        android:id="@+id/etAudioBitrateValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:hint="@string/enter_the_audio_bitrate"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:textColorHint="@color/white"
                        app:hintTextColor="@color/white">

                        <EditText
                            android:id="@+id/etFrameWidth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/enter_frame_width"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:textColorHint="@color/white"
                        app:hintTextColor="@color/white">

                        <EditText
                            android:id="@+id/etFrameheight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/enter_frame_height"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnCompressVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:onClick="compressVideo"
                android:text="@string/compress_video"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSuccess"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivSuccess"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:src="@drawable/success_image" />
        </LinearLayout>
    </LinearLayout>
</layout>